# kaggle_template

./: .gitignore  CLAUDE.md  KAGGLE_API_GUIDE.md  README.md  README_en.md  pyproject.toml
scripts/: download_data.py  setup_environment.sh
